# hydra

./: .dockerignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  deployment.yaml  docker-compose.yml  docker-entrypoint.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  pylint-wrapper.sh
.github/ISSUE_TEMPLATES/: 1-bug-report.md  2-feature-request.md
.github/workflows/: docker-image-release.yml  docker-image.yml  hydra-core.yml  hydra-ui.yml  hydra_core.yml  migrations.yml
etc/: nginx.conf  supervisord.conf
jenkins/: Jenkinsfile  podTemplate.yaml
src/hydra-core/: README.md  pyproject.toml  requirements-test.in  requirements-test.txt  requirements.txt  setup.cfg
src/hydra-core/hydra_core/: celery.py  exceptions.py  mixins.py  models.py  services.py  settings.py  urls.py  views.py  wsgi.py
src/hydra-core/hydra_core/migrations/: 0002_Settings.py
src/hydra-core/hydra_core/tests/: test_services.py  test_views.py
src/hydra-core/time_reporting/: admin.py  apps.py  models.py  services.py  tasks.py  urls.py  views.py
src/hydra-core/time_reporting/migrations/: 0002_RecordApproval.py
src/hydra-core/time_reporting/tests/: factories.py  test_tasks.py  test_views.py
src/hydra-ui/: .env.development  .env.production  package-lock.json  package.json
src/hydra-ui/public/: index.html
src/hydra_core/: .dockerignore  Dockerfile  manage.py  pyproject.toml  requirements-test.in  requirements-test.txt  requirements.in  requirements.txt  setup.cfg
src/hydra_core/hydra_core/: asgi.py  auth.py  settings.py  urls.py  views.py  wsgi.py
src/hydra_core/hydra_core/management/commands/: createuser.py  serve.py
src/hydra_core/hydra_core/migrations/: 0001_initial.py
src/hydra_core/hydra_core/tests/: conftest.py  factories.py  test_views.py
src/hydra_core/time_reporting/: admin.py  models.py  services.py  urls.py  views.py
src/hydra_core/time_reporting/migrations/: 0001_initial.py  0002_alter_timerecord_start_time.py
src/hydra_core/time_reporting/tests/: conftest.py  factories.py  test_services.py  test_views.py
utils/: import_kronos.py
(+91 files in other folders)
