[metadata]
name = hydra-core
description = Project Hydra - Core Daemon

[options]
zip_safe = False
packages = find:
python_requires = >= 3.8
install_requires =
    django==3.2.10
    django-environ
    django-redis
    django_rest_framework
    paste
    psycopg2
    pydantic
    redis==3.5.3
    waitress
    whitenoise
tests_require =
    factory-boy
    pytest
    pytest-django
    black
    flake8
    mypy
    isort
    pylint
    pylint-django
    types-waitress

[flake8]
exclude = env,migrations
show_source = True

[mypy]
check_untyped_defs = True
ignore_missing_imports = True
no_implicit_optional = True
show_column_numbers = True
warn_unused_configs = True
pretty = True

[mypy-*.migrations.*]
ignore_errors = true
